--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 .container {
