--- a/css/styles.css
+++ b/css/styles.css
@@ -26,3 +26,33 @@ body {
     color: rgb(255, 89, 69);
     font-size: 30px;
 }
+
+.task-input-section {
+    display: flex;
+    justify-content: space-between;
+
+    align-items: center;
+    background-color: white;
+    border-radius: 20px;
+}
+
+#task-input-box {
+    outline: 0;
+    border: 0;
+    color:rgb(51, 51, 51);
+    font-size: 15px;
+    font-weight: 600;
+    width: 100%;
+    margin: 10px;
+}
+
+.task-input-section button {
+    border: 0;
+    outline: 0;
+    background-color:  rgb(255, 89, 69);
+    width: 100px;
+    height: 41px;
+    border-radius: 20px;
+
+    cursor: pointer;
+}
