--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ body {
 }
 
 .todo-app li {
-    margin-top: 15px;
+    margin-top: 20px;
     cursor: pointer;
     user-select: none;
     list-style: none;
@@ -71,7 +71,12 @@ body {
     text-decoration: line-through;
 }
 
-span {
+.ticked {
+    content: "\u2713";
+    background-color: rgb(255, 89, 69);
+}
+
+.cross-btn {
     position: absolute;
     right: 0;
     width: 40px;
@@ -82,6 +87,23 @@ span {
     border-radius: 50%;
 }
 
-span:hover {
+.tick-btn {
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    font-size: 20px;
+    line-height: 25px;
+    text-align: center;
+    border-radius: 50%;
+    border: 2px solid  rgb(255, 89, 69);
+    color: white;
+    right: 480px;
+}
+
+.tick-btn:hover {
+    background-color: rgb(255, 89, 69) ;
+}
+
+.cross-btn:hover {
     background-color: rgb(138, 138, 138);
 }
